<resources>
    <string name="app_name">ChatApp</string>
    <string name="user_name">User Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="Alreadyhave_account_message">Already have an account? Login here...</string>
    <string name="signup">Need to signup?</string>
    <string name="log_in">Log in</string>
    <string name="username">UserName</string>
    <string name="description">Description</string>
    <string name="elipses">...</string>
    <string name="send">Send</string>
</resources>
