<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground">

    <ImageView
        android:id="@+id/profilePicture_login"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="12dp"
        android:background="@drawable/profile_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_myplaces"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilePicture_login">

        <EditText
            android:id="@+id/email_edittext_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textboxHeight"
            android:layout_marginBottom="12dp"
            android:background="@drawable/rounded_edittext_login"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            tools:ignore="RtlSymmetry,TextFields" />

        <EditText
            android:id="@+id/password_edittext_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textboxHeight"
            android:layout_marginBottom="12dp"
            android:background="@drawable/rounded_edittext_login"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            tools:ignore="RtlSymmetry,TextFields" />

        <Button
            android:id="@+id/login_button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in" />

    </LinearLayout>

    <TextView
        android:id="@+id/register_link_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.75" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/selectphoto_imageview_login"
        android:layout_width="145dp"
        android:layout_height="145dp"
        app:civ_border_width="3dp"
        app:civ_border_color="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/profilePicture_login"
        app:layout_constraintEnd_toEndOf="@+id/profilePicture_login"
        app:layout_constraintStart_toStartOf="@+id/profilePicture_login"
        app:layout_constraintTop_toTopOf="@+id/profilePicture_login" />

</androidx.constraintlayout.widget.ConstraintLayout>